--- a/.github/workflows/CI-CD1.yml
+++ b/.github/workflows/CI-CD1.yml
@@ -5,7 +5,7 @@ on:
       - main
 jobs:
   build-and-push:
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout the code
         uses: actions/checkout@v3
